<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:columnCount="4"
    android:rowCount="5" >

    <!-- 登录标题文字 -->

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_row="1"
        android:text="@string/username"
        android:textSize="22sp" />
    <!-- 用户名称输入框 -->

    <EditText
        android:id="@+id/txtUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_columnSpan="3"
        android:layout_row="1"
        android:width="200dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_row="2"
        android:text="@string/password"
        android:textSize="22sp" />
    <!-- 密码输入框 -->

    <EditText
        android:id="@+id/txtPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_columnSpan="3"
        android:layout_row="2"
        android:password="true"
        android:width="200dp" />
    <!-- 登录按钮 -->
    <!-- 注册按钮 -->

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_gravity="right|top"
        android:layout_row="0"
        android:text="@string/managercenter"
        android:textSize="22sp" />

    <Button
        android:id="@+id/cmdRegist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="2"
        android:layout_gravity="left|top"
        android:layout_row="4"
        android:text="@string/regist" />

    <Button
        android:id="@+id/cmdLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_gravity="left|top"
        android:layout_row="4"
        android:text="@string/login" />

</GridLayout>